# dswrap

./: .dockerignore  .gitignore  404.html  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  main.go  paste.html  unionfs.go
.github/workflows/: build.yml  check.yml
src/: main.rs
