[package]
name = "mcpaste"
version = "1.0.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
axum = { version = "0.5", features = ["http1"], default-features = false }
reqwest = { version = "0.11", features = ["native-tls", "stream"], default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"]}

[profile.release]
codegen-units = 1
lto = "fat"
